# Kometa

./: .dockerignore  .envrc  .gitattributes  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .pyright-baseline.json  .readthedocs.yml  .spellcheck.yml  AGENTS.md  CHANGELOG  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.lxml  Dockerfile.webui  FD_LEAK_FIX.md  FD_LIMIT_FIX.md  FEATURE_SUMMARY.md  LICENSE  OVERLAY_COMPARISON_COLLECTOR.md  PILLOW_FD_FIX.md  README.markdown  README.md  STATS_EXPANSION_PLAN.md  UPDATED_FEATURE_SUMMARY.md  VERSION  dev-requirements.txt  dictionary.dic  docker-compose.example  docker_run.sh  docker_run_v2.sh  kometa.py  mkdocs.yml  plex_meta_manager.py  pyproject.toml  requirements-lxml.txt  requirements.txt  (+2 more)
.github/: .wordlist.txt  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1.bug_report.yml  2.defaults.yml  2.docs_request.yml  2.feature_request.yml  2.pmm_default.yml  3.docs_request.yml  bug_report.md  config.yml  feature_request.md
.github/python/: update_sponsors.py
.github/workflows/: commit.yml  copyright.yml  develop-arm7.yml  develop.yml  docker-base.yml  docker-develop.yml  docker-latest.yml  docker-nightly.yml  docker-test.yml  docker-version.yml  docker-webui.yml  increment-build.yml  latest.yml  lint.yml  merge-develop.yml  merge-master.yml  nightly-test.yml  nightly.yml  pyright.yml  release-develop.yml  release-master.yml  release-notification.yml  release.yml  spellcheck.yml  tag-cleanup.yml  tag-new-version.yml  tag.yml  test.yml  tests.yml  validate-pull.yml  validate.yml  version.yml
config/: Glasti-Movies.yml  Movies.yml.template  config.yml  config.yml.temp  config.yml.template  config_test_neu.cache  config_test_neu.yml
config/metadata/: country.yml
config/overlays/: all_video_format.yml  audio_codec.yml  content_rating_de.yml  content_rating_us_movie.yml  direct_play.yml  languages.yml  status.yml
defaults/: README.md  playlist.yml  templates.yml
defaults/award/: MODULE.md  bafta.yml  berlinale.yml  cannes.yml  cesar.yml  choice.yml  emmy.yml  golden.yml  nfr.yml  oscars.yml  other.yml  other_award.yml  pca.yml  razzie.yml  sag.yml  separator.yml  separator_award.yml  spirit.yml  sundance.yml  tiff.yml  venice.yml
defaults/both/: MODULE.md  actor.yml  aspect.yml  audio_language.yml  based.yml  basedon.yml  collectionless.yml  content_rating_au.yml  content_rating_cs.yml  content_rating_de.yml  content_rating_de.yml.orig  content_rating_mal.yml  content_rating_nz.yml  content_rating_uk.yml  genre.yml  resolution.yml  resolution_standards.yml  streaming.yml  studio.yml  studio_anime.yml  subtitle_language.yml  universe.yml  year.yml
defaults/chart/: MODULE.md  anilist.yml  basic.yml  flixpatrol.yml  imdb.yml  letterboxd.yml  myanimelist.yml  other.yml  other_chart.yml  separator_chart.yml  simkl.yml  tautulli.yml  tmdb.yml  trakt.yml
defaults/images/: mcu.yml
defaults/metadata/: mcu.yml  templates.yml
defaults/movie/: MODULE.md  composer.yml  content_rating_us.yml  continent.yml  country.yml  decade.yml  director.yml  franchise.yml  producer.yml  region.yml  seasonal.yml  universe.yml  writer.yml
defaults/overlays/: MODULE.md  aspect.yml  audio_codec.yml  audio_language.yml  commonsense.yml  content_rating_au.yml  content_rating_de.yml  content_rating_nz.yml  content_rating_uk.yml  content_rating_us_movie.yml  content_rating_us_show.yml  cr_uk.yml  cr_us_movie.yml  cr_us_show.yml  direct_play.yml  edition.yml  episode_info.yml  flixpatrol.yml  language.yml  language_count.yml  languages.yml  mediastinger.yml  network.yml  ratings.yml  resolution.yml  ribbon.yml  runtimes.yml  special_release.yml  status.yml  streaming.yml  studio.yml  studios_animes-v2.yml  studios_animes-v3.yml  studios_animes.yml  templates.yml  versions.yml  video_format.yml
defaults/show/: MODULE.md  content_rating_mal.yml  content_rating_us.yml  continent.yml  country.yml  decade.yml  franchise.yml  network.yml  region.yml  studio_anime.yml
defaults/translations/: CHANGELOG  da.yml  de.yml  deDE.yml  default.yml  es.yml  fr.yml  it.yml  pt-br.yml
docs/: .meta.yml  404.md  conf.py  features.md  home.md  index.md  mkdocs.yml  requirements.txt
docs/_static/: custom.css
docs/_templates/: navbar.html
docs/blog/: .authors.yml  index.md
docs/builders/: anidb.md  anilist.md  dynamic.md  dynamic_types.md  (+20 more)
json-schema/: MODULE.md  README.md  collection-schema.json  config-schema.json  kitchen_sink_config.yml  metadata-schema.json  overlay-schema.json  playlist-schema.json  prototype_comprehensive.yml  prototype_config.yml  template-schema.json
modules/: MODULE.md  anidb.py  anilist.py  apprise_notify.py  arms.py  boxofficemojo.py  builder.py  cache.py  config.py  convert.py  doesthedogdie.py  emby.py  emby_server.py  ergast.py  errors.py  flixpatrol.py  github.py  gotify.py  icheckmovies.py  imdb.py  jellyfin.py  jolpica.py  jsonurl.py  letterboxd.py  library.py  logs.py  mal.py  mdblist.py  meta.py  mojo.py  notifiarr.py  ntfy.py  omdb.py  operations.py  overlay.py  overlays.py  playlist.py  plex.py  poster.py  radarr.py  (+16 more)
scripts/: README.md  pyright_baseline.py  start-dev.ps1  start-dev.sh  stop-dev.ps1  stop-dev.sh
tests/: ANIDB_TEST_UPDATES.md  IMPLEMENTATION_SUMMARY.md  MODULE.md  README.md  TESTING_GUIDE.md  __init__.py  conftest.py  pytest.ini  requirements.txt  rs-test.py  test_anidb.py  test_anilist.py  test_api_integrations.py  test_apprise_notify.py  test_artwork.py  test_builder.py  test_cache.py  test_collection_schema.py  test_config.py  test_convert.py  test_duplicate_collections.py  test_ergast.py  test_fetch_overlay_value.py  test_github.py  test_imdb.py  test_imports.py  test_kometa.py  test_letterboxd.py  test_log_summary.py  test_logs.py  test_mal.py  test_mdblist.py  test_meta.py  test_more_modules.py  test_omdb.py  test_operations.py  test_overlay.py  test_overlay_change_detection.py  test_overlays.py  test_plex.py  (+17 more)
webui/: DESIGN_NOTES.md  Dockerfile  Dockerfile.vue  README.md  app.py  docker-compose.vue.yml  docker-compose.yml
(+818 files in other folders)
