[project]
name = "kometa"
version = "2.3.1"
description = "Metadata editor for Plex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apprise>=1.9.0",
    "arrapi==1.4.14",
    "babel>=2.18.0",
    "cloudscraper==1.2.71",
    "colorama>=0.4.6",
    "gitpython==3.1.46",
    "jsonschema==4.26.0",
    "jinja2>=3.1.6",
    "lxml==6.0.2",
    "markdown>=3.10.2",
    "material-plausible-plugin>=0.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material>=9.7.6",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-redirects>=1.2.3",
    "neoteroi-mkdocs>=1.2.0",
    "num2words==0.5.14",
    "packaging==26.0",
    "paginate>=0.5.7",
    "pathvalidate==3.3.1",
    "pillow==12.1.1",
    "plexapi==4.18.1",
    "psutil==7.2.2",
    "pygments>=2.20.0",
    "pymdown-extensions>=10.21.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pywin32==311 ; sys_platform == 'win32'",
    "regex>=2026.4.4",
    "requests==2.33.1",
    "ruamel-yaml==0.19.1",
    "schedule==1.2.2",
    "setuptools==82.0.1",
    "tenacity==9.1.4",
    "tmdbapis==1.2.30",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 256
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 256

[tool.bandit]
exclude_dirs = ["tests", "config", ".venv", "test_venv", ".direnv"]
skips = ["B101"]

[tool.uv.sources]
mkdocs-include-markdown-plugin = { git = "https://github.com/Kometa-Team/mkdocs-include-markdown-plugin", rev = "master" }

[dependency-groups]
dev = [
    "arrapi==1.4.14",
    "cloudscraper==1.2.71",
    "gitpython==3.1.46",
    "lxml==6.0.2",
    "num2words==0.5.14",
    "packaging==26.0",
    "pathvalidate==3.3.1",
    "pillow==12.1.1",
    "plexapi==4.18.1",
    "psutil==7.2.2",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pywin32==311 ; sys_platform == 'win32'",
    "requests==2.33.1",
    "ruamel-yaml==0.19.1",
    "schedule==1.2.2",
    "setuptools==82.0.1",
    "tenacity==9.1.4",
    "tmdbapis==1.2.30",
]
