[project]
name = "kometa"
version = "2.3.1"
description = "Metadata editor for Plex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apprise>=1.9.0",
    "arrapi==1.4.14",
    "babel>=2.18.0",
    "cloudscraper==1.2.71",
    "colorama>=0.4.6",
    "gitpython==3.1.50",
    "jsonschema==4.26.0",
    "jinja2>=3.1.6",
    "letterboxdpy==6.5.7",
    "lxml==6.1.1",
    "markdown>=3.10.2",
    "material-plausible-plugin>=0.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material>=9.7.6",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-redirects>=1.2.3",
    "neoteroi-mkdocs>=1.2.0",
    "num2words==0.5.14",
    "packaging==26.2",
    "paginate>=0.5.7",
    "pathvalidate==3.3.1",
    "pillow==12.3.0",
    "plexapi==4.18.1",
    "psutil==7.2.2",
    "pygments>=2.20.0",
    "pymdown-extensions>=10.21.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pywin32==312 ; sys_platform == 'win32'",
    "regex>=2026.4.4",
    "requests==2.34.2",
    "ruamel-yaml==0.19.1",
    "schedule==1.2.2",
    "setuptools==82.0.1",
    "tenacity==9.1.4",
    "tmdbapis==1.2.30",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--tb=short"

[tool.coverage.run]
source = ["modules"]
omit = ["modules/MODULE.md"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def __repr__",
    "def __str__",
]


[tool.black]
line-length = 256
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 256

[tool.bandit]
exclude_dirs = ["tests", "config", ".venv", "test_venv", ".direnv"]
skips = ["B101"]

[tool.pyright]
# Static type checker (replaces mypy as of this PR).
#
# Strategy: ratcheting baseline. We do NOT require zero errors. We require
# that the error count does not GO UP on a PR. See:
#   - .pyright-baseline.json (current accepted error count)
#   - scripts/pyright_baseline.py (gate logic)
#   - .github/workflows/pyright.yml (CI job)
#
# To opt a single file into stricter checking, add this line at the top:
#   # pyright: strict
#
# To silence a single line (use sparingly!):
#   foo.bar  # pyright: ignore[reportOptionalMemberAccess]
include = ["modules", "kometa.py"]
stubPath = "stubs"
exclude = [
    "**/__pycache__",
    "**/.*",
    ".venv",
    "test_venv",
    ".direnv",
    "build",
    "dist",
    "docs",
    "config",
    "defaults",
    "fonts",
    "json-schema",
    "tests",
]
pythonVersion = "3.12"
typeCheckingMode = "basic"

# Third-party packages without type stubs would otherwise generate hundreds
# of false positives. We silence those globally; real errors still surface.
reportMissingImports = "none"
reportMissingTypeStubs = "none"

# Allow gradual typing — don't punish code that simply isn't annotated yet.
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"


[tool.uv.sources]
mkdocs-include-markdown-plugin = { git = "https://github.com/Kometa-Team/mkdocs-include-markdown-plugin", rev = "master" }

[dependency-groups]
dev = [
    "arrapi==1.4.14",
    "cloudscraper==1.2.71",
    "gitpython==3.1.50",
    "letterboxdpy==6.5.7",
    "lxml==6.1.1",
    "num2words==0.5.14",
    "packaging==26.2",
    "pathvalidate==3.3.1",
    "pillow==12.3.0",
    "plexapi==4.18.1",
    "psutil==7.2.2",
    "pytest==9.1.1",
    "pytest-cov>=7.0.0",
    "responses>=0.25.0",
    "pytest-timeout>=2.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pywin32==312 ; sys_platform == 'win32'",
    "requests==2.34.2",
    "ruamel-yaml==0.19.1",
    "schedule==1.2.2",
    "setuptools==82.0.1",
    "tenacity==9.1.4",
    "tmdbapis==1.2.30",
]
